footer in html was modified

--- a/src/index.html
+++ b/src/index.html
@@ -333,6 +333,18 @@
             >Meruyert Rakymzhan</a
           >
         </p>
+        <p class="footer__text">
+          © 2023 - Template developed by
+          <a rel="noreferrer" href="https://github.com/mira565" target="_blank"
+            >Meruyert Rakymzhan</a
+          >
+        </p>
+        <p class="footer__text">
+          © 2023 - Template developed by
+          <a rel="noreferrer" href="https://github.com/mira565" target="_blank"
+            >Meruyert Rakymzhan</a
+          >
+        </p>
       </div>
     </footer>
     
