changes in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -240,18 +240,17 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Virtual Keyboard</h3>
+                <h3 class="project-wrapper__text-title">Cars angular</h3>
                 <div>
                   <p class="mb-4">
-                    The purpose of this project was to enhance knowledge in CSS, JavaScript by adding color generator tool, night mode shift responsive design
-
+                    The purpose of this project was to convert HTML, CSS, JavaScript website to Angular project and add a  backend 
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://mira565.github.io/keyboard/"
+                  href="https://mira565.github.io/cars-angular/"
                 >
                   See Live
                 </a>
@@ -259,7 +258,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="https://github.com/mira565/keyboard"
+                  href="https://github.com/mira565/cars-angular"
                 >
                   Source Code
                 </a>
@@ -327,18 +326,6 @@
         <hr />
 
        
-        <p class="footer__text">
-          © 2023 - Template developed by
-          <a rel="noreferrer" href="https://github.com/mira565" target="_blank"
-            >Meruyert Rakymzhan</a
-          >
-        </p>
-        <p class="footer__text">
-          © 2023 - Template developed by
-          <a rel="noreferrer" href="https://github.com/mira565" target="_blank"
-            >Meruyert Rakymzhan</a
-          >
-        </p>
         <p class="footer__text">
           © 2023 - Template developed by
           <a rel="noreferrer" href="https://github.com/mira565" target="_blank"
