changes were in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
                 Results-driven and hard-working professional with 4+ experience in construction field looking forward to switch my economics career into IT. During my 6 month courses
-                 I've learned to code and create my own webpages unsing HTML,CSS, JavaScript, Vue, node.js and php
+                 I've learned to code and create my own webpages using HTML,CSS, JavaScript, Vue, node.js and php
               </p>
               <p class="about-wrapper__info-text">
                 Aside from my job, I am a yoga lover, nft enthusiast who also loves home gardening and nature.
