--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
                   <p class="mb-4">
                     The main goal of this project was to acquire some frontend fundamentals 
                     Learn how to build a content with HTML, CSS styles, animation, adaptive web design, 
-                    and Javascript functions how to change portfolio images by clicking, switch languages, day/night modes.
+                    and Javascript functions how to change portfolio images by clicking, switch languages.
                   </p>
                 </div>
                 <a
