--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Meruyert Rakymzhan</span>
           <br />
-          I'm a Frontend Developer
+          I'm a QA engineer who used to learn building websites
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
